# maskme

./: .replit  README.md  app.py  appW.py  appWork.py  main.py  pyproject.toml  svgtoimg.py
templates/: index.html  result.html  upload.html
