[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-wtf>=1.2.2",
    "mediapipe>=0.10.18",
    "numpy>=1.26.4",
    "opencv-python>=4.10.0.84",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
    "requests>=2.32.3",
    "openai>=1.57.2",
]
